Propagate errors from ItemRetriever to FETCH handler

Errors from the ItemRetriever (e.g. calling requestItemDelivery
on a resource in offline mode) will be propagated to the FETCH handler
now, so that the caller of ItemFetchJob can show an error message
to the user.

BUG:252178